Updated/Merged CSS + FontAwesome Prep

--- a/postTemplate.html
+++ b/postTemplate.html
@@ -8,7 +8,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
       
-    <link rel="stylesheet" href="postTemplate.css"/>
+    <link rel="stylesheet" href="stylesheets/style.css"/>
 
     <title>postTemplate</title>
   </head>
@@ -23,7 +23,7 @@
                     <div class="titleLine">
                         <h5 class="card-title">Card title</h5>
                         <div class="profilePicture">
-                            <img src="images/Profile%20Picture%20Placeholder.jpg" width="40px" style="float: left;"/>
+                            <img src="images/Profile%20Picture%20Placeholder.jpg" width="40px" class="profilePicture" style="float: left;"/>
                         </div>
                         <div class="sideInfo">
                             <div class="usersName">
