--- a/home.html
+++ b/home.html
@@ -27,7 +27,7 @@
     <div class="card wrapper-uniq-home eighty no-clear">
         <div class="card-body internal-body-uniq">
             <div id="messages"></div>
-            <h2><img src="../images/icons/SVG/cauldron-icon-l.svg" style="height: 45px; margin-right: 15px;"/>Map</h2>
+            <h2><i class="fas fa-sign-in-alt"></i> Login / Sign Up</h2>
         </div>
     </div>
     </a>
