--- a/formTemplate.html
+++ b/formTemplate.html
@@ -16,10 +16,20 @@
     <!--The template starts here.-->
     <div class="card">
         <div class="card-body form">
+            <h4>Title</h4>
             <input/>
+            <br/>
+            
+            <h4>Body</h4>
             <textarea></textarea>
+            <br/>
+            
+            <h4>Resources</h4>
             <input/>
+            <br/>
+            <h4>YouTube</h4>
             <input/>
+            <br/>
             <button>Post</button>
         </div>
     </div>
