--- a/home.html
+++ b/home.html
@@ -27,7 +27,7 @@
     <div class="card wrapper-uniq-home eighty no-clear">
         <div class="card-body internal-body-uniq">
             <div id="messages"></div>
-            <h2><i class="fas fa-sign-in-alt"></i> Login / Sign Up</h2>
+            <h2><i class="fas fa-sign-in-alt iconSpace"></i>Login / Sign Up</h2>
         </div>
     </div>
     </a>
@@ -35,7 +35,7 @@
     <div class="card wrapper-uniq-home eighty no-clear">
         <div class="card-body internal-body-uniq">
             <div id="messages"></div>
-            <h2><img src="../images/icons/SVG/MUMMY.svg" style="height: 45px; margin-right: 15px;"/>Search</h2>
+            <h2><i class="fas fa-search iconSpace"></i>Browse Topics</h2>
         </div>
     </div>
     </a>
@@ -43,7 +43,7 @@
     <div class="card wrapper-uniq-home eighty no-clear">
         <div class="card-body internal-body-uniq">
             <div id="messages"></div>
-            <h2><img src="../images/icons/SVG/CTHULU.svg" style="height: 45px; margin-right: 15px;"/>About</h2>
+            <h2><i class="fas fa-info iconSpace"></i>About</h2>
         </div>
     </div>
     </a>
