--- a/home.html
+++ b/home.html
@@ -23,29 +23,45 @@
             <h2>Real connections, real success<span class="offColor">.</span></h2>
         </div>
     </div>
-    <a href="../map.html" class="home-link">
-    <div class="card wrapper-uniq-home eighty no-clear">
-        <div class="card-body internal-body-uniq">
-            <div id="messages"></div>
-            <h2><i class="fas fa-sign-in-alt iconSpace"></i>Login / Sign Up</h2>
+<div class="container">
+    <div class="row">
+        <div class="col-sm">
+        <a href="../map.html" class="home-link">
+            <div class="card wrapper-uniq-home eighty no-clear">
+                <div class="card-body internal-body-uniq">
+                    <div id="messages"></div>
+                    <div class="row floatLeft">
+                        <div class="col-sm">
+
+                            <i class="fas fa-sign-in-alt iconSpace floatLeft" style="font-size: 2rem;"></i>
+                            <h2>Login / Sign Up</h2>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </a>
+        </div>
+        <div class="col-sm">
+            <a href="../login.html" class="home-link">
+                <div class="card wrapper-uniq-home eighty no-clear">
+                    <div class="card-body internal-body-uniq">
+                        <div id="messages"></div>
+                        <h2><i class="fas fa-search iconSpace"></i>Browse Topics</h2>
+                    </div>
+                </div>
+            </a>
+        </div>
+        <div class="col-sm">
+            <a href="../about.html" class="home-link">
+                <div class="card wrapper-uniq-home eighty no-clear">
+                    <div class="card-body internal-body-uniq">
+                        <div id="messages"></div>
+                        <h2><i class="fas fa-info iconSpace"></i>About</h2>
+                    </div>
+                </div>
+            </a>
         </div>
     </div>
-    </a>
-    <a href="../login.html" class="home-link">
-    <div class="card wrapper-uniq-home eighty no-clear">
-        <div class="card-body internal-body-uniq">
-            <div id="messages"></div>
-            <h2><i class="fas fa-search iconSpace"></i>Browse Topics</h2>
-        </div>
-    </div>
-    </a>
-    <a href="../about.html" class="home-link">
-    <div class="card wrapper-uniq-home eighty no-clear">
-        <div class="card-body internal-body-uniq">
-            <div id="messages"></div>
-            <h2><i class="fas fa-info iconSpace"></i>About</h2>
-        </div>
-    </div>
-    </a>
+</div>
   </body>
 </html>
