--- a/home.html
+++ b/home.html
@@ -7,53 +7,47 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
+    <link rel="stylesheet" href="stylesheets/style.css">
 
     <title>Class Exchange</title>
     <script defer src="https://use.fontawesome.com/releases/v5.6.3/js/all.js" integrity="sha384-EIHISlAOj4zgYieurP0SdoiBYfGJKkgWedPHH4jCzpCXLmzVsw1ouK59MuUtP4a1" crossorigin="anonymous"></script>
   </head>
-  <body>
 <body>
     <!-- <div include-html="../navbar.html"></div> -->
 
-    <div class="card wrapper-uniq-home">
+    <div class="card wrapper-uniq-home homeTitle">
         <div class="card-body internal-body-uniq">
             <div id="messages"></div>
-            <h1 style="font-size: 30pt"><img src="https://cdn.sstatic.net/Sites/stackoverflow/company/img/logos/so/so-icon.png?v=c78bd457575a" style="height: 60px;" alt="Class Overflow Logo"/>Class Exchange
+            <h1 style="font-size: 30pt"><img src="https://cdn.sstatic.net/Sites/stackoverflow/company/img/logos/so/so-icon.png?v=c78bd457575a" style="height: 60px;" alt="Class Overflow Logo"/>Class Exchange</h1>
             <hr/>
             <h2>Real connections, real success<span class="offColor">.</span></h2>
         </div>
     </div>
-<div class="container">
+<div class="container center">
     <div class="row">
-        <div class="col-sm">
-        <a href="../map.html" class="home-link">
-            <div class="card wrapper-uniq-home eighty no-clear">
-                <div class="card-body internal-body-uniq">
-                    <div id="messages"></div>
-                    <div class="row floatLeft">
-                        <div class="col-sm">
-
-                            <i class="fas fa-sign-in-alt iconSpace floatLeft" style="font-size: 2rem;"></i>
-                            <h2>Login / Sign Up</h2>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </a>
-        </div>
-        <div class="col-sm">
-            <a href="../login.html" class="home-link">
-                <div class="card wrapper-uniq-home eighty no-clear">
+        <div class="col-xl homeButtons">
+            <a href="../map.html" class="home-link">
+                <div class="card wrapper-uniq-home eighty no-clear content">
                     <div class="card-body internal-body-uniq">
                         <div id="messages"></div>
-                        <h2><i class="fas fa-search iconSpace"></i>Browse Topics</h2>
+                        <h2><i class="fas fa-sign-in-alt iconSpace"></i>Login / Sign Up</h2>
                     </div>
                 </div>
             </a>
         </div>
-        <div class="col-sm">
+        <div class="col-xl homeButtons ">
+            <a href="../login.html" class="home-link">
+                <div class="card wrapper-uniq-home eighty no-clear  content">
+                    <div class="card-body internal-body-uniq">
+                        <div id="messages"></div>
+                        <h2><i class="fas fa-search iconSpace"></i>Browse</h2>
+                    </div>
+                </div>
+            </a>
+        </div>
+        <div class="col-xl homeButtons">
             <a href="../about.html" class="home-link">
-                <div class="card wrapper-uniq-home eighty no-clear">
+                <div class="card wrapper-uniq-home eighty no-clear  content">
                     <div class="card-body internal-body-uniq">
                         <div id="messages"></div>
                         <h2><i class="fas fa-info iconSpace"></i>About</h2>
@@ -63,5 +57,5 @@
         </div>
     </div>
 </div>
-  </body>
+</body>
 </html>
