Content Tag is Changed

--- a/home.html
+++ b/home.html
@@ -27,7 +27,7 @@
     <div class="row">
         <div class="col-xl homeButtons">
             <a href="../map.html" class="home-link">
-                <div class="card wrapper-uniq-home eighty no-clear content">
+                <div class="card wrapper-uniq-home eighty no-clear contentBackground">
                     <div class="card-body internal-body-uniq">
                         <div id="messages"></div>
                         <h2><i class="fas fa-sign-in-alt iconSpace"></i>Login / Sign Up</h2>
@@ -37,7 +37,7 @@
         </div>
         <div class="col-xl homeButtons ">
             <a href="../login.html" class="home-link">
-                <div class="card wrapper-uniq-home eighty no-clear  content">
+                <div class="card wrapper-uniq-home eighty no-clear  contentBackground">
                     <div class="card-body internal-body-uniq">
                         <div id="messages"></div>
                         <h2><i class="fas fa-search iconSpace"></i>Browse</h2>
@@ -47,7 +47,7 @@
         </div>
         <div class="col-xl homeButtons">
             <a href="../about.html" class="home-link">
-                <div class="card wrapper-uniq-home eighty no-clear  content">
+                <div class="card wrapper-uniq-home eighty no-clear  contentBackground">
                     <div class="card-body internal-body-uniq">
                         <div id="messages"></div>
                         <h2><i class="fas fa-info iconSpace"></i>About</h2>
