Animation test FAIL

--- a/home.html
+++ b/home.html
@@ -8,6 +8,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
     <link rel="stylesheet" href="stylesheets/style.css">
+    <link rel="stylesheet" href="animate.min.css">
 
     <title>Class Exchange</title>
     <script defer src="https://use.fontawesome.com/releases/v5.6.3/js/all.js" integrity="sha384-EIHISlAOj4zgYieurP0SdoiBYfGJKkgWedPHH4jCzpCXLmzVsw1ouK59MuUtP4a1" crossorigin="anonymous"></script>
@@ -30,7 +31,7 @@
                 <div class="card wrapper-uniq-home eighty no-clear contentBackground">
                     <div class="card-body internal-body-uniq">
                         <div id="messages"></div>
-                        <h2><i class="fas fa-sign-in-alt iconSpace"></i>Login / Sign Up</h2>
+                        <h2 class="animated fadeInLeft"><i class="fas fa-sign-in-alt iconSpace"></i>Login / Sign Up</h2>
                     </div>
                 </div>
             </a>
