--- a/profile.html
+++ b/profile.html
@@ -63,14 +63,14 @@
                             <input type="text" name="newName" id="newName" class="surroundSpace fullWidth" />
                         </div>
                         <div class="col-sm-auto">
-                            <input type="button" onclick="updateName();" value="Update" class="btn btn-outline-info surroundSpace"  />
-                            <input type="button" onclick="toggleEdit('Name');" value="Cancel" class="btn btn-outline-info surroundSpace"  />
+                            <input type="button" onclick="updateName();" value="Update" class="btn btn-outline-info surroundSpace" />
+                            <input type="button" onclick="toggleEdit('Name');" value="Cancel" class="btn btn-outline-info surroundSpace" />
                         </div>
                     </div>
                 </form>
             </div>
 
-            <div class="profile-line contentBackground addPadding">
+            <div class="profile-line contentBackground addPadding noScroll">
                 <div class="floatLeft">
                     <a id="editEmailIcon">
                         <i class="far fa-edit"></i>
@@ -78,9 +78,16 @@
                     <strong>Email: </strong>
                     <span id="userEmail"></span>
                 </div><br />
-                <form id="editEmailForm" class="floatLeft" style="display: none;">
-                    <input type="text" name="newEmail" id="newEmail" style="width: 300px;" class="surroundSpace" />
-                    <input type="button" onclick="updateEmail();" value="Update" class="btn btn-outline-info surroundSpace" /><input type="button" onclick="toggleEdit('Email');" value="Cancel" class="btn btn-outline-info surroundSpace" />
+                <form id="editEmailForm"  style="display: none;">
+                    <div class="row">
+                        <div class="col-sm-12 col-md-6">
+                            <input type="text" name="newEmail" id="newEmail" style="width: 100%;" class="surroundSpace fullWidth" />
+                        </div>
+                        <div class="col-sm-auto">
+                            <input type="button" onclick="updateEmail();" value="Update" class="btn btn-outline-info surroundSpace" /><input type="button" onclick="toggleEdit('Email');" value="Cancel" class="btn btn-outline-info surroundSpace" />
+                        </div>
+                    </div>
+
                 </form>
             </div>
 
