--- a/profile.html
+++ b/profile.html
@@ -78,9 +78,9 @@
                     <strong>Email: </strong>
                     <span id="userEmail"></span>
                 </div><br />
-                <form id="editEmailForm"  style="display: none;">
+                <form id="editEmailForm" style="display: none;">
                     <div class="row">
-                        <div class="col-sm-12 col-md-6">
+                        <div class="col-sm-12 col-md-10">
                             <input type="text" name="newEmail" id="newEmail" style="width: 100%;" class="surroundSpace fullWidth" />
                         </div>
                         <div class="col-sm-auto">
@@ -91,7 +91,7 @@
                 </form>
             </div>
 
-            <div class="profile-line contentBackground addPadding">
+            <div class="profile-line contentBackground addPadding noScroll">
                 <div class="floatLeft">
                     <a id="editPasswordIcon">
                         <i class="far fa-edit"></i>
@@ -99,11 +99,17 @@
                     <strong>Password: </strong>
                     <span id="userPassword"></span>
                 </div><br />
-                <form id="editPasswordForm" class="floatLeft" style="display: none;">
-                    <input type="password" name="newPassword" id="newPassword" placeholder="New Password" class="surroundSpace" />
-                    <input type="password" name="confirmPassword" id="confirmPassword" placeholder="Confirm Password" class="surroundSpace" />
-                    <input type="button" onclick="updatePassword();" value="Update" class="btn btn-outline-info surroundSpace" />
-                    <input type="button" onclick="toggleEdit('Password');" value="Cancel" class="btn btn-outline-info surroundSpace" />
+                <form id="editPasswordForm" style="display: none;">
+                    <div class="row">
+                        <div class="col-sm-12 col-md-6">
+                            <input type="password" name="newPassword" id="newPassword" placeholder="New Password" class="surroundSpace fullWidth" />
+                            <input type="password" name="confirmPassword" id="confirmPassword" placeholder="Confirm Password" class="surroundSpace fullWidth" />
+                        </div>
+                        <div class="col-sm-auto">
+                            <input type="button" onclick="updatePassword();" value="Update" class="btn btn-outline-info surroundSpace" />
+                            <input type="button" onclick="toggleEdit('Password');" value="Cancel" class="btn btn-outline-info surroundSpace" />
+                        </div>
+                    </div>
                 </form>
             </div>
 
@@ -115,11 +121,11 @@
                     <strong>Role: </strong>
                     <span id="userRole"></span>
                 </div><br />
-                <form id="editRoleForm" class="floatLeft" style="display: none;">
+                <form id="editRoleForm" style="display: none;">
                     <select id="newRole" name="newRole" class="surroundSpace">
                         <option value="Student">Student</option>
                         <option value="Teacher">Teacher</option>
-                    </select>
+                    </select><br />
                     <input type="button" onclick="updateRole();" value="Update" class="btn btn-outline-info surroundSpace" />
                     <input type="button" onclick="toggleEdit('Role');" value="Cancel" class="btn btn-outline-info surroundSpace" />
                 </form>
@@ -133,7 +139,7 @@
                     <strong>Profile Picture: </strong>
                     <span id="userImage"></span>
                 </div><br />
-                <form id="editImageForm" class="floatLeft" style="display: none;">
+                <form id="editImageForm" style="display: none;">
                     <input type="file" name="newImage" id="newIamge" placeholder="New Profile Picture" class="surroundSpace" />
                     <input type="button" onclick="updateImage();" value="Update" class="btn btn-outline-info surroundSpace" />
                     <input type="button" onclick="toggleEdit('Image');" value="Cancel" class="btn btn-outline-info surroundSpace" />
