--- a/home.html
+++ b/home.html
@@ -19,7 +19,7 @@
     <div class="card wrapper-uniq-home homeTitle">
         <div class="card-body internal-body-uniq">
             <div id="messages"></div>
-            <h1 style="font-size: 30pt"><img src="https://cdn.sstatic.net/Sites/stackoverflow/company/img/logos/so/so-icon.png?v=c78bd457575a" style="height: 60px;" alt="Class Overflow Logo"/>Class Exchange</h1>
+            <img src="../class-exchange/images/classExchangeBanner.png" style="height: 60px;" alt="Class Overflow"/>
             <hr class="contentBackground"/>
             <h2>Real connections, real success<span class="offColor">.</span></h2>
         </div>
