--- a/requestTopic.html
+++ b/requestTopic.html
@@ -25,7 +25,7 @@
                     <div class="row">
                       <div class="col-6">Name: </div>
                       <div class="col-6">
-                        <textarea id = "categories" rows = 1></textarea>
+                        <textarea class = "textbox" id = "categories" rows = 1></textarea>
                       </div>
                     </div>
                     <div class="row">
