--- a/createClass.html
+++ b/createClass.html
@@ -27,13 +27,13 @@
                     <div class="row">
                       <div class="col-6">Name: </div>
                       <div class="col-6">
-                          <textarea id = "name" rows = 1 placeholder= "My Class"></textarea>
+                          <textarea class = "textbox" id = "name" rows = 1 placeholder= "My Class"></textarea>
                       </div>
                     </div>
                     <div class="row">
                       <div class="col-6">Categories: </div>
                       <div class="col-6">
-                          <textarea id = "categories" rows = 1 placeholder= "Comma separated"></textarea>
+                          <textarea class = "textbox" id = "categories" rows = 1 placeholder= "Comma separated"></textarea>
                       </div>
                     </div>
                     
