--- a/joinClass.html
+++ b/joinClass.html
@@ -27,13 +27,13 @@
                     <div class="row">
                       <div class="col-6">Class ID: </div>
                       <div class="col-6">
-                        <textarea id = "categories" rows = 1 placeholder= "xxxxx" maxlength="5"></textarea>
+                        <textarea class = "textbox" id = "categories" rows = 1 placeholder= "xxxxx" maxlength="5"></textarea>
                       </div>
                     </div>
                     <div class="row">
                       <div class="col-6">Code: </div>
                       <div class="col-6">
-                          <textarea id = "categories" rows = 1 placeholder= "#" maxlength="5"></textarea>
+                          <textarea class = "textbox" id = "categories" rows = 1 placeholder= "#" maxlength="5"></textarea>
                       </div>
                     </div>
                     
