Lots of random updates
Added terms, privacy, and about pages
Updated the template so all documents pull from the same scripts
Fixed page titles
Removed the old unused home page
In the process of getting topic to show up in the side navigation bar

--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Template | ClassExchange</title>
+        <title>About | ClassExchange</title>
         
         <!-- Our custom stylesheet -->
         <link href="../stylesheets/style.css" rel="stylesheet" id="css">
@@ -42,30 +42,7 @@
             <div include-html="../templates/sidebar.html" id="sidenav" class="sidenav"></div>
             <div class="content">
                 <div id="messages"></div>
-                <p>This is test content.</p>
-                <p>This is more content.</p>
-                <p>This is test content.</p>
-                <p>This is more content.</p>
-                <p>This is test content.</p>
-                <p>This is more content.</p>
-                <p>This is test content.</p>
-                <p>This is more content.</p>
-                <p>This is test content.</p>
-                <p>This is more content.</p>
-                <p>This is test content.</p>
-                <p>This is more content.</p>
-                <p>This is test content.</p>
-                <p>This is more content.</p>
-                <p>This is test content.</p>
-                <p>This is more content.</p>
-                <p>This is test content.</p>
-                <p>This is more content.</p>
-                <p>This is test content.</p>
-                <p>This is more content.</p>
-                <p>This is test content.</p>
-                <p>This is more content.</p>
-                <p>This is test content.</p>
-                <p>This is more content.</p>
+                <h1>About</h1>
                 
             </div>
         </div>
