--- a/profile.html
+++ b/profile.html
@@ -20,6 +20,7 @@
     <script src="https://www.gstatic.com/firebasejs/5.8.0/firebase-firestore.js"></script>
     <script src="../scripts/firebasescripts-db.js"></script>
     <script src="../scripts/firebasescripts-auth.js"></script>
+    <script src="../scripts/formscripts.js"></script>
     <script>
         auth.onAuthStateChanged(function() {
                 console.log(auth.currentUser);
