--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Template | ClassExchange</title>
+        <title>ClassExchange</title>
         
         <!-- Our custom stylesheet -->
         <link href="../stylesheets/style.css" rel="stylesheet" id="css">
@@ -19,6 +19,7 @@
         <script src="https://www.gstatic.com/firebasejs/5.8.0/firebase-firestore.js"></script>
         <script src="../scripts/firebasescripts-db.js"></script>
         <script src="../scripts/firebasescripts-auth.js"></script>
+        <script src="../scripts/formscripts.js"></script>
         <script>
             auth.onAuthStateChanged(function() {
                 console.log(auth.currentUser);
