--- a/login.html
+++ b/login.html
@@ -13,15 +13,13 @@
         <!-- Import on page load scripts -->
         <script src="../scripts/loadscripts.js"></script>
     
-        <!-- Import on page load scripts -->
-        <script src="../scripts/loadscripts.js"></script>
-    
         <!-- Import Firebase Scripts -->
         <script src="https://www.gstatic.com/firebasejs/5.8.0/firebase-app.js"></script>
         <script src="https://www.gstatic.com/firebasejs/5.8.0/firebase-auth.js"></script>
         <script src="https://www.gstatic.com/firebasejs/5.8.0/firebase-firestore.js"></script>
         <script src="../scripts/firebasescripts-db.js"></script>
         <script src="../scripts/firebasescripts-auth.js"></script>
+        <script src="../scripts/formscripts.js"></script>
         <script>
             auth.onAuthStateChanged(function() {
                 console.log(auth.currentUser);
