--- a/createClass.html
+++ b/createClass.html
@@ -25,14 +25,14 @@
                     </div>
                     
                     <div class="row">
-                      <div class="col-6">Name: </div>
-                      <div class="col-6">
+                      <div class="col-4">Name: </div>
+                      <div class="col-auto">
                           <textarea class = "textbox" id = "name" rows = 1 placeholder= "My Class"></textarea>
                       </div>
                     </div>
                     <div class="row">
-                      <div class="col-6">Categories: </div>
-                      <div class="col-6">
+                      <div class="col-4">Categories: </div>
+                      <div class="col-auto">
                           <textarea class = "textbox" id = "categories" rows = 1 placeholder= "Comma separated"></textarea>
                       </div>
                     </div>
