--- a/joinClass.html
+++ b/joinClass.html
@@ -25,15 +25,15 @@
                     </div>
                     
                     <div class="row">
-                      <div class="col-6">Class ID: </div>
-                      <div class="col-6">
-                        <textarea class = "textbox" id = "categories" rows = 1 placeholder= "xxxxx" maxlength="5"></textarea>
+                      <div class="col-4">Class ID: </div>
+                      <div class="col-auto">
+                        <textarea class = "textbox textArea " id = "categories" rows = 1 placeholder= "xxxxx" maxlength="5"></textarea>
                       </div>
                     </div>
                     <div class="row">
-                      <div class="col-6">Code: </div>
-                      <div class="col-6">
-                          <textarea class = "textbox" id = "categories" rows = 1 placeholder= "#" maxlength="5"></textarea>
+                      <div class="col-4">Code: </div>
+                      <div class="col-auto">
+                          <textarea class = "textbox textArea" id = "categories" rows = 1 placeholder= "#" maxlength="5"></textarea>
                       </div>
                     </div>
                     
