--- a/profile.html
+++ b/profile.html
@@ -125,7 +125,7 @@
                 <form id="editRoleForm" style="display: none;" class="noScroll">
                     <div class="row">
                         <div class="col-sm-12 col-md-6">
-                            <select id="newRole" name="newRole" class="surroundSpace dropDown fullWidth">
+                            <select id="newRole" name="newRole" class="surroundSpace dropDown" style="width:99%;">
                                 <option value="Student">Student</option>
                                 <option value="Teacher">Teacher</option>
                             </select>
