Final Form Styling

--- a/formTemplate.html
+++ b/formTemplate.html
@@ -18,20 +18,20 @@
     <!--The template starts here.-->
     <div class="card">
         <div class="card-body form contentBackground">
-            <h4>Title</h4>
-            <input class="textStyle fullWidth" />
+            <h6 class="seperateDown">Title</h6>
+            <input class="textStyle fullWidth seperateDown" placeholder="Title your post here"/>
             <br />
 
-            <h4>Body</h4>
-            <textarea class="textStyle fullWidth"></textarea>
+            <h6 class="seperateDown">Body</h6>
+            <textarea class="textStyle fullWidth" placeholder="Type your post here"></textarea>
             <br />
 
-            <h4>Resources</h4>
-            <input class="textStyle fullWidth" />
+            <h6 class="seperateDown">Links</h6>
+            <input class="textStyle fullWidth seperateDown" placeholder="Place comma seperated resource links here"/>
             <br />
 
-            <h4>YouTube</h4>
-            <input class="textStyle fullWidth" />
+            <!---<h6>YouTube</h6>--->
+            <input class="textStyle fullWidth " placeholder="Place comma seperated YouTube video links here"/>
             <br />
 
             <input type="button" class="btn btn-outline-info" value="Post" style="margin-top: .5rem" />
