--- a/joinClass.html
+++ b/joinClass.html
@@ -27,7 +27,7 @@
                     <div class="row">
                       <div class="col-4">Class ID: </div>
                       <div class="col-auto">
-                        <input type="text" class = "textbox textArea " id = "categories" placeholder= "xxxxx" maxlength="5">
+                        <input type="text" class = "textbox textArea seperateDown" id = "categories" placeholder= "xxxxx" maxlength="5">
                       </div>
                     </div>
                     <div class="row">
