--- a/profile.html
+++ b/profile.html
@@ -85,7 +85,7 @@
                             <input type="text" name="newEmail" id="newEmail" style="width: 100%;" class="surroundSpace fullWidth textStyle" />
                         </div>
                         <div class="col-sm-auto">
-                            <input type="button" onclick="updateEmail();" value="Update" class="btn btn-outline-info surroundSpace" /><input type="button" onclick="toggleEdit('Email');" value="Cancel" class="btn btn-outline-info surroundSpace" />
+                            <input type="button" onclick="updateEmail();" value="Update" class="btn btn-outline-info surroundSpace seperateRight" /><input type="button" onclick="toggleEdit('Email');" value="Cancel" class="btn btn-outline-info surroundSpace" />
                         </div>
                     </div>
 
