--- a/requestTopic.html
+++ b/requestTopic.html
@@ -26,7 +26,7 @@
                     <div class="row">
                         <div class="col-6">Name:</div>
                         <div class="col-6">
-                            <input type="text" class="textbox textStyle" id="categories"/>
+                            <input type="text" class="textbox textStyle seperateDown" id="categories"/>
                         </div>
                     </div>
                     <div class="row">
