--- a/formTemplate.html
+++ b/formTemplate.html
@@ -16,8 +16,8 @@
 <body>
 
     <!--The template starts here.-->
-    <div class="card">
-        <div class="card-body form contentBackground">
+    <div class="card contentBackground extraMargin">
+        <div class="card-body form">
             <h6 class="seperateDown">Title</h6>
             <input class="textStyle fullWidth seperateDown" placeholder="Title your post here"/>
             <br />
