--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <div id="messagesLoggedOut"></div>
             <div class="card wrapper-uniq-home homeTitle">
                 <div class="card-body internal-body-uniq">
-                    <h1 style="font-size: 30pt"><img src="https://cdn.sstatic.net/Sites/stackoverflow/company/img/logos/so/so-icon.png?v=c78bd457575a" style="height: 60px;" alt="Class Overflow Logo"/>Class Exchange</h1>
+                    <img src="../class-exchange/images/Class%20Exchange%20Banner.jpg" style="height: 60px;" alt="Class Overflow Logo"/>
                     <hr class="contentBackground"/>
                     <h2>Real connections, real success<span class="offColor">.</span></h2>
                 </div>
