Final Updates made before SpartaHack V demo

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <div id="messagesLoggedOut"></div>
             <div class="card wrapper-uniq-home homeTitle">
                 <div class="card-body internal-body-uniq">
-                    <img src="../class-exchange/images/Class%20Exchange%20Banner.jpg" style="height: 60px;" alt="Class Overflow Logo"/>
+                    <img src="../images/classExchangeBanner.png" style="height: 60px;" alt="Class Overflow Logo"/>
                     <hr class="contentBackground"/>
                     <h2>Real connections, real success<span class="offColor">.</span></h2>
                 </div>
